--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Bella - Oficial</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-    
+    <div id="principal">
+        <img src="imagens/capa.png">
+
+        <div id="menu">
+            <a href="index.html">HOME</a>  |
+            <a href="biografia.html">BIOGRAFIA</a>  |
+            <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITÁRIAS</a>  |
+            <a href="contato.html">CONTATO</a>  
+        </div>
+
+        <div id="conteudo"> <!--inicio do conteúdo-->
+            <h1 class="formatacao">Sobre Anna Bella</h1>
+
+            <p>Anna Bella, uma presença cativante no mundo da moda, é uma modelo que transcende a beleza convencional. Com sua graça natural e elegância deslumbrante, ela conquistou corações e palcos ao redor do globo. Com uma carreira sólida e uma ética de trabalho impecável, Anna Bella não é apenas uma modelo, mas uma inspiração para muitos aspirantes a entrar no universo da moda.</p>
+
+            <p>Desde os primeiros passos na passarela até os mais recentes projetos de alta costura, Anna Bella estabeleceu-se como uma figura icônica na indústria da moda. Sua habilidade de contar uma história através das lentes da câmera e sua capacidade de se adaptar a uma variedade de estilos são testemunhos do seu talento versátil. Com um olhar penetrante e uma presença magnética, Anna Bella redefine os padrões de beleza, promovendo a aceitação e a diversidade na moda.</p>
+
+            <p>Além das passarelas e sessões de fotos, Anna Bella é conhecida por seu trabalho filantrópico, apoiando causas sociais e ambientais. Seu compromisso com a responsabilidade social reflete sua visão de um mundo onde a moda não é apenas uma expressão artística, mas também uma força positiva para a mudança. Ao unir elegância e propósito, Anna Bella continua a encantar o mundo da moda, deixando um legado duradouro e inspirando gerações futuras a seguirem seus passos.</p>
+        </div> <!--fim do conteúdo-->
+
+        <div id="rodape">
+            <h4 class="centralizar">© TODOS OS DIREITOS RESERVADOS</h4>
+        </div>
+    </div>
 </body>
 </html>
